--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WssNode</title>
+  <title>Darble</title>
   <base href="https://olakunledavid.github.io/darble/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,5 +12,5 @@
 <link rel="stylesheet" href="styles.95f90b6f60131d294ea0.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.78dc2871d28282fc084a.js" type="module"></script><script src="runtime-es5.78dc2871d28282fc084a.js" nomodule="" defer=""></script><script src="polyfills-es5.ea28eaaa5a4162f498ba.js" nomodule="" defer=""></script><script src="polyfills-es2015.1ca0a42e128600892efa.js" type="module"></script><script src="main-es2015.07d0483b2c76be4d5631.js" type="module"></script><script src="main-es5.07d0483b2c76be4d5631.js" nomodule="" defer=""></script></body>
+<script src="runtime-es2015.78dc2871d28282fc084a.js" type="module"></script><script src="runtime-es5.78dc2871d28282fc084a.js" nomodule="" defer=""></script><script src="polyfills-es5.ea28eaaa5a4162f498ba.js" nomodule="" defer=""></script><script src="polyfills-es2015.1ca0a42e128600892efa.js" type="module"></script><script src="main-es2015.07d267a8b70e470b06b5.js" type="module"></script><script src="main-es5.07d267a8b70e470b06b5.js" nomodule="" defer=""></script></body>
 </html>
